License wip: went down a wrong path w.r.t. license parsing

--- a/src/templates/remote_crate.BUILD.template
+++ b/src/templates/remote_crate.BUILD.template
@@ -5,6 +5,12 @@ DO NOT EDIT! Replaced on runs of cargo-raze
 """
 package(default_visibility = ["//visibility:public"])
 
+licenses(
+{%- for license in crate.licenses %}
+  "{{license.rating}}" # "{{license.name}}",
+{%- endfor %}
+)
+
 load(
     "@io_bazel_rules_rust//rust:rust.bzl",
     "rust_library",
