--- a/src/templates/remote_crates.bzl.template
+++ b/src/templates/remote_crates.bzl.template
@@ -11,6 +11,6 @@ def {{workspace.gen_workspace_prefix}}_fetch_remote_crates():
         url = "https://crates-io.s3-us-west-1.amazonaws.com/crates/{{crate.pkg_name}}/{{crate.pkg_name}}-{{crate.pkg_version}}.crate",
         type = "tar.gz",
         strip_prefix = "{{crate.pkg_name}}-{{crate.pkg_version}}",
-        build_file = "{{workspace.workspace_path}}:{{crate.pkg_name}}-{{crate.pkg_version}}.BUILD"
+        build_file = "{{workspace.workspace_path}}/remote:{{crate.pkg_name}}-{{crate.pkg_version}}.BUILD"
     )
 {% endfor %}
