--- a/src/templates/partials/remote_build_script.template
+++ b/src/templates/partials/remote_build_script.template
@@ -23,6 +23,9 @@ rust_binary(
       "{{feature}}",
       {%- endfor %}
     ],
+    {%- if crate.data %}
+    data = "{{crate.data}}",
+    {%- endif %}
     visibility = ["//visibility:private"],
 )
 
