--- a/src/templates/partials/build_script.template
+++ b/src/templates/partials/build_script.template
@@ -20,9 +20,7 @@ rust_binary(
       "{{feature}}",
       {%- endfor %}
     ],
-    {%- if crate.data %}
-    data = "{{crate.data}}",
-    {%- endif %}
+    data = glob(["*"]),
     visibility = ["//visibility:private"],
 )
 
