--- a/src/templates/partials/remote_rust_binary.template
+++ b/src/templates/partials/remote_rust_binary.template
@@ -25,8 +25,8 @@ rust_binary(
     {%- if crate.build_script_target %}
     out_dir_tar = ":{{ crate.pkg_name | replace(from="-", to="_")}}_build_script_executor",
     {%- endif %}
-    {%- if crate.data %}
-    data = "{{crate.data}}",
+    {%- if crate.data_attr %}
+    data = {{crate.data_attr}},
     {%- endif %}
     crate_features = [
         {%- for feature in crate.features %}
