--- a/src/templates/partials/build_script.template
+++ b/src/templates/partials/build_script.template
@@ -6,9 +6,6 @@ rust_binary(
     {%- else %}
     crate_root = "build.rs",
     {%- endif %}
-    data = glob([
-      "*"
-    ]),
     deps = [
       {%- for dependency in crate.build_dependencies %}
         "{{workspace.workspace_path}}/vendor/{{dependency.name}}-{{dependency.version}}:{{dependency.name | replace(from="-", to="_") }}",
@@ -23,6 +20,7 @@ rust_binary(
       "{{feature}}",
       {%- endfor %}
     ],
+    data = glob(["*"]),
     visibility = ["//visibility:private"],
 )
 
