First try at more sophisticated travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+dist: trusty
+sudo: required
 language: rust
 addons:
   apt:
@@ -6,6 +8,22 @@ addons:
     packages:
       - cmake-data
       - cmake
+
+# Thanks, github.com/pubref/rules_protobuf!
+# https://github.com/bazelbuild/bazel/issues/29#issuecomment-271428146
+before_install:
+  - OS=linux
+  - ARCH=x86_64
+  - V=0.11.1a
+  - GH_BASE="https://github.com/bazelbuild/bazel/releases/download/$V"
+  - GH_ARTIFACT="bazel-$V-installer-$OS-$ARCH.sh"
+  - URL="$GH_BASE/$GH_ARTIFACT"
+  - echo $URL
+  - wget -O install.sh $URL
+  - chmod +x install.sh
+  - ./install.sh --user
+  - rm -f install.sh
+
 rust:
   - stable
   - beta
@@ -14,3 +32,7 @@ matrix:
   allow_failures:
     - rust: nightly
 
+script:
+  - cargo build test --verbose
+  - cargo install -f
+  - ./smoke-test.sh
