--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ addons:
 before_install:
   - OS=linux
   - ARCH=x86_64
-  - V=0.11.1a
+  - V=0.11.1
   - GH_BASE="https://github.com/bazelbuild/bazel/releases/download/$V"
   - GH_ARTIFACT="bazel-$V-installer-$OS-$ARCH.sh"
   - URL="$GH_BASE/$GH_ARTIFACT"
@@ -33,6 +33,7 @@ matrix:
     - rust: nightly
 
 script:
-  - cargo build test --verbose
-  - cargo install -f
+  - cargo build --verbose
+  - cargo test --verbose
+  - cargo install --debug -f
   - ./smoke-test.sh
