[ci skip] Make cargo-vendor install faster by using debug build

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ before_install:
   - rm -f install.sh
 
 before_script:
-  - cargo install cargo-vendor
+  - cargo install cargo-vendor --debug
 
 rust:
   - stable
