--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,8 +17,9 @@ tera = "0.11.0-beta.4"
 serde_derive = "1.0.11"
 serde = "1.0.11"
 toml = "0.4.4"
+serde_json = "1.0"
+tempdir = "0.3.5"
 
 [dev-dependencies]
-tempdir = "0.3.5"
 lazy_static = "0.2.8"
 hamcrest = "0.1.3"
