--- a/src/templates/partials/remote_build_script.template
+++ b/src/templates/partials/remote_build_script.template
@@ -28,11 +28,14 @@ genrule(
     name = "{{ crate_name_sanitized  }}_build_script_executor",
     srcs = glob(["*", "**/*.rs"]),
     outs = ["{{ crate_name_sanitized  }}_out_dir_outputs.tar.gz"],
-    tools = [":{{ crate_name_sanitized  }}_build_script"],
+    tools = [
+      ":{{ crate_name_sanitized  }}_build_script",
+      "@io_bazel_rules_rust//:rustc",
+    ],
     local = 1,
     cmd = "mkdir {{ crate_name_sanitized}}_out_dir_outputs/;"
         + " (export CARGO_MANIFEST_DIR=\"$$PWD/$$(dirname $(location :Cargo.toml))\";"
-        + " export RUSTC=\"$$PWD/$(location @rust_linux_x86_64//:rustc)\";"
+        + " export RUSTC=\"$$PWD/$(location @io_bazel_rules_rust//:rustc)\";"
         + " export TARGET='{{ crate.platform_triple }}';"
         + " export RUST_BACKTRACE=1;"
         {%- for feature in crate.features %}
