--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ A Cargo subcommand to generate Bazel BUILD files
 rustc-serialize = "0.3"
 cargo = "0.20.0"
 itertools = "0.6.0"
+slug = "0.1.2"
 tera = "0.11.0-beta.4"
 serde_derive = "1.0.11"
 serde = "1.0.11"
