Fix up travis not liking the new packaging

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,9 @@ matrix:
     - rust: nightly
 
 script:
+  - cd impl
   - cargo build --verbose
   - cargo test --verbose
   - cargo install --debug -f
+  - cd ../
   - ./smoke-test.sh
