--- a/impl/src/templates/remote_crates.bzl.template
+++ b/impl/src/templates/remote_crates.bzl.template
@@ -6,6 +6,15 @@ DO NOT EDIT! Replaced on runs of cargo-raze
 
 def {{workspace.gen_workspace_prefix}}_fetch_remote_crates():
 {% for crate in crates %}
+    {%- if crate.git_data %}
+    native.new_git_repository(
+        name = "{{workspace.gen_workspace_prefix}}__{{crate.pkg_name | slugify | replace(from="-", to="_")}}__{{crate.pkg_version | slugify | replace(from="-", to="_")}}",
+        remote = "{{crate.git_data.remote}}",
+        commit = "{{crate.git_data.commit}}",
+        build_file = "{{workspace.workspace_path}}/remote:{{crate.pkg_name}}-{{crate.pkg_version}}.BUILD",
+        init_submodules = True
+    )
+    {%- else %}
     native.new_http_archive(
         name = "{{workspace.gen_workspace_prefix}}__{{crate.pkg_name | slugify | replace(from="-", to="_")}}__{{crate.pkg_version | slugify | replace(from="-", to="_")}}",
         url = "https://crates-io.s3-us-west-1.amazonaws.com/crates/{{crate.pkg_name}}/{{crate.pkg_name}}-{{crate.pkg_version}}.crate",
@@ -13,4 +22,5 @@ def {{workspace.gen_workspace_prefix}}_fetch_remote_crates():
         strip_prefix = "{{crate.pkg_name}}-{{crate.pkg_version}}",
         build_file = "{{workspace.workspace_path}}/remote:{{crate.pkg_name}}-{{crate.pkg_version}}.BUILD"
     )
+    {%- endif %}
 {% endfor %}
