--- a/src/templates/partials/build_script.template
+++ b/src/templates/partials/build_script.template
@@ -8,7 +8,7 @@ rust_binary(
     {%- endif %}
     deps = [
       {%- for dependency in crate.build_dependencies %}
-        "{{dependency.build_path}}",
+        "{{dependency.build_target}}",
       {%- endfor %}
     ],
     rustc_flags = [
@@ -30,9 +30,8 @@ genrule(
     outs = ["{{ crate_name_sanitized  }}_out_dir_outputs.tar.gz"],
     tools = [":{{ crate_name_sanitized  }}_build_script"],
     local = 1,
-    cmd = "mkdir {{ crate_name_sanitized}}_out_dir_outputs/;"
+    cmd = "mkdir -p {{ crate_name_sanitized}}_out_dir_outputs/;"
         + " (export CARGO_MANIFEST_DIR=\"$$PWD/$$(dirname $(location :Cargo.toml))\";"
-        + " export RUSTC=\"$$PWD/$(location @rust_linux_x86_64//:rustc)\";"
         + " export TARGET='{{ crate.platform_triple }}';"
         + " export RUST_BACKTRACE=1;"
         {%- for feature in crate.features %}
