--- a/src/templates/partials/rust_library.template
+++ b/src/templates/partials/rust_library.template
@@ -13,7 +13,7 @@ rust_library(
     srcs = glob(["**/*.rs"]),
     deps = [
         {%- for dependency in crate.dependencies %}
-        "{{dependency.build_path}}",
+        "{{dependency.build_target}}",
         {%- endfor %}
         {%- for dependency in crate.additional_deps %}
         "{{dependency}}",
