Add version number to imported crates
Now that rust_library/rust_binary supports it.

--- a/impl/src/templates/partials/build_script.template
+++ b/impl/src/templates/partials/build_script.template
@@ -21,6 +21,7 @@ rust_binary(
       {%- endfor %}
     ],
     data = glob(["*"]),
+    version = "{{ crate.pkg_version }}",
     visibility = ["//visibility:private"],
 )
 
