--- a/impl/src/templates/partials/remote_build_script.template
+++ b/impl/src/templates/partials/remote_build_script.template
@@ -20,6 +20,7 @@ rust_binary(
       "{{feature}}",
       {%- endfor %}
     ],
+    version = "{{ crate.pkg_version }}",
     data = glob(["*"]),
     visibility = ["//visibility:private"],
 )
