--- a/impl/src/templates/remote_crates.bzl.template
+++ b/impl/src/templates/remote_crates.bzl.template
@@ -4,6 +4,8 @@ cargo-raze crate workspace functions
 DO NOT EDIT! Replaced on runs of cargo-raze
 """
 
+load(":utils.bzl", "crate_workspace_name")
+
 def _new_http_archive(name, **kwargs):
     if not native.existing_rule(name):
         native.new_http_archive(name=name, **kwargs)
@@ -16,7 +18,8 @@ def {{workspace.gen_workspace_prefix}}_fetch_remote_crates():
 {% for crate in crates %}
     {%- if crate.git_data %}
     _new_git_repository(
-        name = "{{workspace.gen_workspace_prefix}}__{{crate.pkg_name | slugify | replace(from="-", to="_")}}__{{crate.pkg_version | slugify | replace(from="-", to="_")}}",
+        name = crate_workspace_name("{{crate.pkg_name | slugify | replace(from="-", to="_")}}",
+                                    "{{crate.pkg_version | slugify | replace(from="-", to="_")}}"),
         remote = "{{crate.git_data.remote}}",
         commit = "{{crate.git_data.commit}}",
         build_file = "{{workspace.workspace_path}}/remote:{{crate.pkg_name}}-{{crate.pkg_version}}.BUILD",
@@ -24,7 +27,8 @@ def {{workspace.gen_workspace_prefix}}_fetch_remote_crates():
     )
     {%- else %}
     _new_http_archive(
-        name = "{{workspace.gen_workspace_prefix}}__{{crate.pkg_name | slugify | replace(from="-", to="_")}}__{{crate.pkg_version | slugify | replace(from="-", to="_")}}",
+        name = crate_workspace_name("{{crate.pkg_name | slugify | replace(from="-", to="_")}}",
+                                    "{{crate.pkg_version | slugify | replace(from="-", to="_")}}"),
         url = "https://crates-io.s3-us-west-1.amazonaws.com/crates/{{crate.pkg_name}}/{{crate.pkg_name}}-{{crate.pkg_version}}.crate",
         type = "tar.gz",
         {% if crate.sha256 -%}
