Remove remote templates and use additional data in context (#45)
* WIP: RM separate remote_ files

* Simplify build_path slightly

* More progress

* Fix a test, save a life

* Put the remote_crates back

--- a/impl/Cargo.toml
+++ b/impl/Cargo.toml
@@ -17,6 +17,7 @@ travis-ci = { repository = "google/cargo-raze", branch = "master" }
 rustc-serialize = "0.3"
 cargo = "0.20.0"
 itertools = "0.6.0"
+slug = "0.1.2"
 tera = "0.11.0-beta.4"
 serde_derive = "1.0.11"
 serde = "1.0.11"
