--- a/impl/src/templates/remote_crates.bzl.template
+++ b/impl/src/templates/remote_crates.bzl.template
@@ -15,6 +15,12 @@ def _new_git_repository(name, **kwargs):
         native.new_git_repository(name=name, **kwargs)
 
 def {{workspace.gen_workspace_prefix}}_fetch_remote_crates():
+    # Utility workspace (accessible from individual crates)
+    native.local_repository(
+        name = "{{workspace.gen_workspace_prefix}}_internal",
+        path = "{{workspace.workspace_path}}/internal",
+    )
+
 {% for crate in crates %}
     {%- if crate.git_data %}
     _new_git_repository(
