--- a/impl/src/templates/partials/rust_library.template
+++ b/impl/src/templates/partials/rust_library.template
@@ -15,14 +15,14 @@ rust_library(
         {%- for dependency in crate.dependencies %}
         "{{dependency.build_target}}",
         {%- endfor %}
-        {%- for dependency in crate.additional_deps %}
+        {%- for dependency in crate.raze_settings.additional_deps %}
         "{{dependency}}",
         {%- endfor %}
     ],
     rustc_flags = [
         "--cap-lints allow",
-        "--target={{crate.platform_triple}}",
-        {%- for flag in crate.additional_flags %}
+        "--target={{workspace.platform_triple}}",
+        {%- for flag in crate.raze_settings.additional_flags %}
         "{{flag}}",
         {%- endfor %}
     ],
