--- a/impl/src/templates/remote_crates.bzl.template
+++ b/impl/src/templates/remote_crates.bzl.template
@@ -14,11 +14,11 @@ def _new_git_repository(name, **kwargs):
 
 def {{workspace.gen_workspace_prefix}}_fetch_remote_crates():
 {% for crate in crates %}
-    {%- if crate.git_data %}
+    {%- if crate.source_details.git_data %}
     _new_git_repository(
         name = "{{workspace.gen_workspace_prefix}}__{{crate.pkg_name | slugify | replace(from="-", to="_")}}__{{crate.pkg_version | slugify | replace(from="-", to="_")}}",
-        remote = "{{crate.git_data.remote}}",
-        commit = "{{crate.git_data.commit}}",
+        remote = "{{crate.source_details.git_data.remote}}",
+        commit = "{{crate.source_details.git_data.commit}}",
         build_file = "{{workspace.workspace_path}}/remote:{{crate.pkg_name}}-{{crate.pkg_version}}.BUILD",
         init_submodules = True
     )
