Fix broken index insertion (debug_uggh) and rendering

--- a/impl/src/templates/partials/build_script.template
+++ b/impl/src/templates/partials/build_script.template
@@ -8,7 +8,7 @@ rust_binary(
     {%- endif %}
     deps = [
       {%- for dependency in crate.build_dependencies %}
-        "{{dependency.build_target}}",
+        "{{dependency.buildable_target}}",
       {%- endfor %}
     ],
     rustc_flags = [
