Fix tests and update some context var names

--- a/impl/src/templates/workspace.BUILD.template
+++ b/impl/src/templates/workspace.BUILD.template
@@ -14,7 +14,7 @@ licenses([
 {%- set crate_name_sanitized = crate.pkg_name | replace(from="-", to="_") %}
 alias(
     name = "{{crate_name_sanitized}}",
-    actual = "{{crate.build_path}}:{{crate_name_sanitized}}",
+    actual = "{{crate.workspace_path_to_crate}}:{{crate_name_sanitized}}",
 )
 {%- endif %}
 {%- for aliased_target in crate.raze_settings.extra_aliased_targets %}
@@ -22,7 +22,7 @@ alias(
     # Extra aliased target, from raze configuration
     # N.B.: The exact form of this is subject to change.
     name = "{{aliased_target}}",
-    actual = "{{crate.build_path}}:{{aliased_target}}",
+    actual = "{{crate.workspace_path_to_crate}}:{{aliased_target}}",
 )
 {%- endfor %}
 {%- endfor %}
