Clean up the planner code (#56)
* Wip the first

* Wip the second

* Clean code -- terrible formatter

* Handle a lot of nits, but not the failing tests

* Fix broken index insertion (debug_uggh) and rendering

* Fix bug where root crate was expected to be vendored

* Fix crate_context.build_path and update missing root crate test

* Fix minor bugs with file generations

* Fix tests and update some context var names

--- a/impl/src/templates/partials/rust_binary.template
+++ b/impl/src/templates/partials/rust_binary.template
@@ -9,24 +9,24 @@ rust_binary(
         # Binaries get an implicit dependency on their lib
         ":{{crate.pkg_name | replace(from="-", to="_") }}",
         {%- for dependency in crate.dependencies %}
-        "{{dependency.build_target}}",
+        "{{dependency.buildable_target}}",
         {%- endfor %}
-        {%- for dependency in crate.additional_deps %}
+        {%- for dependency in crate.raze_settings.additional_deps %}
         "{{dependency}}",
         {%- endfor %}
     ],
     rustc_flags = [
         "--cap-lints allow",
-        "--target={{crate.platform_triple}}",
-        {%- for flag in crate.additional_flags %}
+        "--target={{workspace.platform_triple}}",
+        {%- for flag in crate.raze_settings.additional_flags %}
         "{{flag}}",
         {%- endfor %}
     ],
     {%- if crate.build_script_target %}
     out_dir_tar = ":{{ crate.pkg_name | replace(from="-", to="_")}}_build_script_executor",
     {%- endif %}
-    {%- if crate.data_attr %}
-    data = {{crate.data_attr}},
+    {%- if crate.raze_settings.data_attr %}
+    data = {{crate.raze_settings.data_attr}},
     {%- endif %}
     version = "{{ crate.pkg_version }}",
     crate_features = [
