--- a/impl/Cargo.toml
+++ b/impl/Cargo.toml
@@ -14,17 +14,18 @@ A Cargo subcommand to generate Bazel BUILD files
 travis-ci = { repository = "google/cargo-raze", branch = "master" }
 
 [dependencies]
-rustc-serialize = "0.3"
-cargo = "0.20.0"
-itertools = "0.6.0"
-slug = "0.1.2"
-tera = "0.11.0-beta.4"
-serde_derive = "1.0.11"
-serde = "1.0.11"
-toml = "0.4.4"
-serde_json = "1.0"
-tempdir = "0.3.5"
+failure = "0.1.2"
+docopt = "1.0.1"
+cargo = "0.30.0"
+itertools = "0.7.8"
+slug = "0.1.4"
+tera = "0.11.18"
+serde_derive = "1.0.80"
+serde = "1.0.80"
+toml = "0.4.8"
+serde_json = "1.0.32"
+tempdir = "0.3.7"
 
 [dev-dependencies]
-lazy_static = "0.2.8"
+lazy_static = "1.1.0"
 hamcrest = "0.1.3"
