--- a/impl/src/templates/partials/rust_library.template
+++ b/impl/src/templates/partials/rust_library.template
@@ -10,6 +10,7 @@ rust_library(
     name = "{{ target_name_sanitized }}",
     crate_root = "{{ target.path }}",
     crate_type = "{{ target.kind }}",
+    edition = "{{ target.edition }}",
     srcs = glob(["**/*.rs"]),
     deps = [
         {%- for dependency in crate.dependencies %}
