Support binary dependencies that do not have associated libs (#87)
* Add crate_context.has_eponymous_lib to fix bins depending on non-existent self-lib

* Quick optimization

* Tweak verbiage of has_eponymous_lib field doc

* Add 'lib_target_name' param to CrateContext

--- a/impl/src/templates/partials/rust_binary.template
+++ b/impl/src/templates/partials/rust_binary.template
@@ -7,8 +7,10 @@ rust_binary(
     edition = "{{ target.edition }}",
     srcs = glob(["**/*.rs"]),
     deps = [
-        # Binaries get an implicit dependency on their lib
-        ":{{crate.pkg_name | replace(from="-", to="_") }}",
+        {%- if crate.lib_target_name %}
+        # Binaries get an implicit dependency on their crate's lib
+        ":{{crate.lib_target_name}}",
+        {%- endif %}
         {%- for dependency in crate.dependencies %}
         "{{dependency.buildable_target}}",
         {%- endfor %}
