[settings] Add output_buildfile_suffix option
This option allows the user to set any suffix to the build files
Default is BUILD
Other values can be for example: BUILD.bazel
Any value is accepted.

This is to allow raze to follow the default behaviour of other bazel
related tools that generate BUILD.bazel instead of BUILD firstly to
separate what is generated and what is written and to avoid name
collisions on case insensitive file systems (Windows + WSL) since some
crates can have a directory named build which leads to cargo-raze
unable to create a file called BUILD. A project having a directory
named BUILD.bazel is much less likely or less to none chance.

--- a/smoke_test/vendored/hello_cargo_library/cargo/Cargo.toml
+++ b/smoke_test/vendored/hello_cargo_library/cargo/Cargo.toml
@@ -13,3 +13,4 @@ path = "fake_lib.rs"
 [raze]
 workspace_path = "//vendored/hello_cargo_library/cargo"
 target = "x86_64-unknown-linux-gnu"
+output_buildfile_suffix = "BUILD.bazel"
