[BUILD] Fix inconsistent casing in targets and dep targets
Inconsistent casing where dep targets were slugified and target names
were not caused errors when crate names were not all lowercase.
This fixes the issue by removing the unnecessary slugifying from the
target name (but keeps it in versioning)
An example for this issue is with security-framework-sys which depends
on the MacTypes-sys crate.
To test this, I've added security-framework-sys as a dependency to both
remote and vendored complicated_cargo_library

--- a/impl/src/templates/crate.BUILD.template
+++ b/impl/src/templates/crate.BUILD.template
@@ -29,6 +29,7 @@ load(
 {%- include "templates/partials/build_script.template" %}
 {%- endif %}
 {%- for target in crate.targets %}
+{%- set target_name_sanitized = target.name | replace(from="-", to="_") %}
 {%- if target.kind == "lib" %}
 {%- include "templates/partials/rust_library.template" %}
 {%- elif target.kind == "bin" %}
