--- a/smoke_test/remote/complicated_cargo_library/cargo/Cargo.toml
+++ b/smoke_test/remote/complicated_cargo_library/cargo/Cargo.toml
@@ -8,12 +8,18 @@ path = "fake_lib.rs"
 [dependencies]
 regex = "0.2.5"
 specs = "0.10.0"
+security-framework-sys = "0.2.2"
 
 [raze]
 workspace_path = "//remote/complicated_cargo_library/cargo"
 target = "x86_64-unknown-linux-gnu"
 gen_workspace_prefix = "complicated_cargo_library"
 genmode = "Remote"
+
+[raze.crates.proc-macro2.'0.4.28']
+additional_flags = [
+    "--cfg=use_proc_macro",
+]
 
 [raze.crates.regex.'0.2.5']
 skipped_deps = [
