--- a/smoke_test/remote/non_cratesio/cargo/Cargo.toml
+++ b/smoke_test/remote/non_cratesio/cargo/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["Bradlee Speice <bradlee.speice@gmail.com>"]
 
 [dependencies]
-rand = { git = "https://github.com/rust-lang-nursery/rand.git", tag = "0.4.1" }
+rand = { git = "https://github.com/rust-random/rand.git", tag = "0.4.1" }
 env_logger = { git = "https://github.com/sebasmagri/env_logger.git", tag = "v0.5.5" }
 # Note that we use a (slightly) outdated version of log; because env_logger resolves a version
 # of `log` from crates.io that may clash with the resolution here, we need to force
