--- a/smoke_test/remote/complicated_cargo_library/cargo/Cargo.toml
+++ b/smoke_test/remote/complicated_cargo_library/cargo/Cargo.toml
@@ -15,6 +15,7 @@ workspace_path = "//remote/complicated_cargo_library/cargo"
 target = "x86_64-unknown-linux-gnu"
 gen_workspace_prefix = "complicated_cargo_library"
 genmode = "Remote"
+output_buildfile_suffix = "BUILD.bazel"
 
 [raze.crates.proc-macro2.'0.4.28']
 additional_flags = [
