--- a/impl/src/templates/partials/rust_library.template
+++ b/impl/src/templates/partials/rust_library.template
@@ -21,6 +21,11 @@ rust_library(
         {%- endfor %}
         {%- endif %}
     ],
+    aliases = {
+      {%- for alias in crate.dependency_aliases %}
+        "{{alias.target}}": "{{alias.alias | replace(from="-", to="_")}}"
+      {%- endfor %}
+    },
     rustc_flags = [
         "--cap-lints=allow",
         {%- if crate.raze_settings %}
