[CI] Get CI functioning properly

--- a/.travis.yml
+++ b/.travis.yml
@@ -37,6 +37,6 @@ script:
   - cd impl
   - cargo build --verbose
   - cargo test --verbose
-  - cargo install --debug -f
+  - cargo install --debug -f --path .
   - cd ../
   - ./smoke-test.sh
