--- a/impl/Cargo.toml
+++ b/impl/Cargo.toml
@@ -34,6 +34,7 @@ serde = "1.0.84"
 toml = "0.4.10"
 serde_json = "1.0.34"
 tempdir = "0.3.7"
+semver = "0.9.0"
 
 [dev-dependencies]
 lazy_static = "1.2.0"
