--- a/impl/Cargo.toml
+++ b/impl/Cargo.toml
@@ -26,7 +26,7 @@ failure = "0.1.5"
 docopt = "1.0.2"
 cargo = "0.42.0"
 cargo-platform = "0.1.0"
-itertools = "0.8.0"
+itertools = "0.8.2"
 slug = "0.1.4"
 tera = "1.0.0"
 serde_derive = "1.0.84"
@@ -34,7 +34,7 @@ serde = "1.0.84"
 toml = "0.4.10"
 serde_json = "1.0.34"
 tempdir = "0.3.7"
-semver = "0.9.0"
+semver = { version = "0.9.0", features = ["serde"] }
 
 [dev-dependencies]
 lazy_static = "1.2.0"
