Update cargo dependency (and add cargo_platform)

--- a/impl/Cargo.toml
+++ b/impl/Cargo.toml
@@ -24,7 +24,8 @@ path = "src/bin/cargo-raze.rs"
 [dependencies]
 failure = "0.1.5"
 docopt = "1.0.2"
-cargo = "0.40.0"
+cargo = "0.42.0"
+cargo-platform = "0.1.0"
 itertools = "0.8.0"
 slug = "0.1.4"
 tera = "1.0.0"
