--- a/impl/Cargo.toml
+++ b/impl/Cargo.toml
@@ -25,6 +25,7 @@ path = "src/bin/cargo-raze.rs"
 failure = "0.1.5"
 docopt = "1.0.2"
 cargo = "0.42.0"
+cargo-lock = "4.0.1"
 cargo-platform = "0.1.0"
 itertools = "0.8.0"
 slug = "0.1.4"
