Use cargo_metadata explicitly

--- a/impl/Cargo.toml
+++ b/impl/Cargo.toml
@@ -25,10 +25,12 @@ path = "src/bin/cargo-raze.rs"
 failure = "0.1.5"
 docopt = "1.0.2"
 cargo = "0.42.0"
+cargo_metadata = "0.9.1"
 cargo-platform = "0.1.0"
 itertools = "0.8.0"
 slug = "0.1.4"
 tera = "1.0.0"
+semver = "0.9.0"
 serde_derive = "1.0.84"
 serde = "1.0.84"
 toml = "0.4.10"
