Remove remaining dependencies on Cargo
This replaces `CargoResult` with anyhow's `Result`, and uses `SourceId`
from cargo_lock instead.

As far as I can tell, we lose 101 dependencies total :)

--- a/impl/Cargo.toml
+++ b/impl/Cargo.toml
@@ -22,9 +22,8 @@ name = "cargo-raze"
 path = "src/bin/cargo-raze.rs"
 
 [dependencies]
-failure = "0.1.5"
+anyhow = "1.0.30"
 docopt = "1.0.2"
-cargo = "0.42.0"
 cargo-lock = "4.0.1"
 cargo-platform = "0.1.0"
 cargo_metadata = "0.9.1"
