Fix: Alias renamed dependencies in generated build rules. (#162)
* Create untested fix for aliased dependencies

* Fix a few bugs

* Fix length in templates

* Final template fix

* Fix templates and replace hyphens with underscores in renamed package

* Use maps to avoid unwraps

* Make changes based on comments from dfreese

* Pull alias strings out to a new struct.

* Change rust_binary template to match rust_library changes.

* Remove sanitize_name and use sanitize_ident

* Add unit test for aliased dependencies

* Run cargo fmt

--- a/impl/src/templates/partials/rust_binary.template
+++ b/impl/src/templates/partials/rust_binary.template
@@ -43,4 +43,11 @@ rust_binary(
         "{{feature}}",
         {%- endfor %}
     ],
+    {%- if crate.aliased_dependencies | length != 0 %}
+    aliases = {
+        {%- for alias in crate.aliased_dependencies %}
+        "{{alias.target}}": "{{alias.alias}}",
+        {%- endfor %}
+    },
+    {%- endif %}
 )
