--- a/impl/src/templates/partials/rust_library.template
+++ b/impl/src/templates/partials/rust_library.template
@@ -44,4 +44,11 @@ rust_library(
         "{{feature}}",
         {%- endfor %}
     ],
+    {%- if crate.aliased_dependencies | length != 0 %}
+    aliases = {
+        {%- for alias in crate.aliased_dependencies %}
+        "{{alias.target}}": "{{alias.alias}}",
+        {%- endfor %}
+    },
+    {%- endif %}
 )
