Glob more sources

--- a/impl/src/templates/partials/build_script.template
+++ b/impl/src/templates/partials/build_script.template
@@ -25,7 +25,7 @@ cargo_build_script(
       "{{feature}}",
       {%- endfor %}
     ],
-    data = glob(["*"]),
+    data = glob(["**"]),
     version = "{{ crate.pkg_version }}",
     visibility = ["//visibility:private"],
 )
