Use crate_name_sanitized

--- a/impl/src/templates/partials/rust_binary.template
+++ b/impl/src/templates/partials/rust_binary.template
@@ -12,7 +12,7 @@ rust_binary(
         ":{{crate.lib_target_name | replace(from="-", to="_") }}",
         {%- endif %}
         {%- if crate.build_script_target %}
-        ":{{ crate.pkg_name | replace(from="-", to="_")}}_build_script",
+        ":{{ crate_name_sanitized }}_build_script",
         {%- endif %}
         {%- for dependency in crate.dependencies %}
         "{{dependency.buildable_target}}",
