Handle proc macros in build dependencies
Proc macro crates were split off into their own field in #164 and then
PR #166 changed handling of build scripts to invoke cargo_build_script,
however, build dependencies can also have proc macros.  This was an
issue for markup5ever, which has a build dependency that transitively
depends on serde_derive.

Fixes #181

--- a/impl/src/templates/partials/build_script.template
+++ b/impl/src/templates/partials/build_script.template
@@ -17,6 +17,13 @@ cargo_build_script(
         "{{dependency.buildable_target}}",
       {%- endfor %}
     ],
+    {%- if crate.build_proc_macro_dependencies %}
+    proc_macro_deps = [
+    {%- for dependency in crate.build_proc_macro_dependencies %}
+        "{{dependency.buildable_target}}",
+    {%- endfor %}
+    ],
+    {%- endif %}
     rustc_flags = [
         "--cap-lints=allow",
     ],
