--- a/smoke_test/vendored/hello_cargo_library/Cargo.toml
+++ b/smoke_test/vendored/hello_cargo_library/Cargo.toml
@@ -8,7 +8,7 @@ log = "0.3.6"
 fern = "0.3.5"
 
 [lib]
-path = "fake_lib.rs"
+path = "src/main.rs"
 
 [raze]
 workspace_path = "//vendored/hello_cargo_library/cargo"
