--- a/smoke_test/remote/non_cratesio/Cargo.toml
+++ b/smoke_test/remote/non_cratesio/Cargo.toml
@@ -11,7 +11,8 @@ env_logger = { git = "https://github.com/sebasmagri/env_logger.git", tag = "v0.5
 # a specific version that's different from what `env_logger` depends on.
 log = { git = "https://github.com/rust-lang-nursery/log.git", rev = "bf40d1f563c" }
 
-[lib]
+[[bin]]
+name = "non_cratesio"
 path = "src/main.rs"
 
 [raze]
@@ -19,3 +20,4 @@ workspace_path = "//remote/non_cratesio/cargo"
 target = "x86_64-unknown-linux-gnu"
 genmode = "Remote"
 gen_workspace_prefix = "non_cratesio"
+incompatible_relative_workspace_path = true
