--- a/smoke_test/remote/regression_test/cargo/Cargo.toml
+++ b/smoke_test/remote/regression_test/cargo/Cargo.toml
@@ -1,10 +1,9 @@
 [package]
-name = "compile_with_bazel"
+name = "regression_test"
 version = "0.1.0"
 
-[[bin]]
-name = "complicated_cargo_library"
-path = "src/main.rs"
+[lib]
+path = "fake_lib.rs"
 
 [dependencies]
 # Newer versions of libloading don't depend on C code anymore, so we're using an older version to
@@ -15,12 +14,11 @@ specs = "=0.10.0"
 security-framework-sys = "0.2.2"
 
 [raze]
-workspace_path = "//remote/complicated_cargo_library/cargo"
+workspace_path = "//remote/regression_test/cargo"
 target = "x86_64-unknown-linux-gnu"
-gen_workspace_prefix = "complicated_cargo_library"
+gen_workspace_prefix = "regression_test"
 genmode = "Remote"
 output_buildfile_suffix = "BUILD.bazel"
-incompatible_relative_workspace_path = true
 
 [raze.crates.proc-macro2.'0.4.28']
 additional_flags = [
@@ -29,7 +27,7 @@ additional_flags = [
 
 [raze.crates.libloading.'0.5.2']
 additional_deps = [":global_static"]
-additional_build_file = "cargo/libloading_global_static.BUILD"
+additional_build_file = "libloading_global_static.BUILD"
 
 [raze.crates.regex.'0.2.5']
 skipped_deps = [
