--- a/smoke_test/vendored/hello_cargo_library/Cargo.toml
+++ b/smoke_test/vendored/hello_cargo_library/Cargo.toml
@@ -7,10 +7,12 @@ authors = ["Alex McArther <acmcarther@gmail.com>"]
 log = "0.3.6"
 fern = "0.3.5"
 
-[lib]
+[[bin]]
+name = "hello_cargo_library"
 path = "src/main.rs"
 
 [raze]
 workspace_path = "//vendored/hello_cargo_library/cargo"
 target = "x86_64-unknown-linux-gnu"
 output_buildfile_suffix = "BUILD.bazel"
+incompatible_relative_workspace_path = true
