--- a/smoke_test/vendored/non_cratesio_library/Cargo.toml
+++ b/smoke_test/vendored/non_cratesio_library/Cargo.toml
@@ -12,9 +12,11 @@ env_logger = { git = "https://github.com/sebasmagri/env_logger.git", tag = "v0.5
 # a specific version that's different from what `env_logger` depends on.
 log = { git = "https://github.com/rust-lang-nursery/log.git", rev = "bf40d1f563c" }
 
-[lib]
+[[bin]]
+name = "non_cratesio_library"
 path = "src/main.rs"
 
 [raze]
 workspace_path = "//vendored/non_cratesio_library/cargo"
 target = "x86_64-unknown-linux-gnu"
+incompatible_relative_workspace_path = true
