--- a/examples/remote/cargo_workspace/add-one/BUILD.bazel
+++ b/examples/remote/cargo_workspace/add-one/BUILD.bazel
@@ -6,13 +6,13 @@ DO NOT EDIT! Replaced on runs of cargo-raze
 package(default_visibility = [
   # Public for visibility by "@raze__crate__version//" targets.
   #
-  # Prefer access through "//remote/cargo_workspace/cargo", which limits external
+  # Prefer access through "//remote/cargo_workspace", which limits external
   # visibility to explicit Cargo.toml dependencies.
   "//visibility:public",
 ])
 
 licenses([
-  "restricted", # BSD-2-Clause from expression "BSD-2-Clause"
+  "restricted", # no license
 ])
 
 load(
@@ -25,22 +25,20 @@ load(
 
 
 rust_library(
-    name = "cloudabi",
+    name = "add_one",
     crate_type = "lib",
     deps = [
-        "@cargo_workspace__bitflags__1_2_1//:bitflags",
+        "@cargo_workspace__rand__0_7_3//:rand",
     ],
     srcs = glob(["**/*.rs"]),
-    crate_root = "cloudabi.rs",
-    edition = "2015",
+    crate_root = "src/lib.rs",
+    edition = "2018",
     rustc_flags = [
         "--cap-lints=allow",
     ],
-    version = "0.0.3",
+    version = "0.1.0",
     tags = ["cargo-raze"],
     crate_features = [
-        "bitflags",
-        "default",
     ],
 )
 
