--- a/examples/remote/cargo_workspace/add-one/Cargo.toml
+++ b/examples/remote/cargo_workspace/add-one/Cargo.toml
@@ -10,4 +10,6 @@ edition = "2018"
 path = "src/lib.rs"
 
 [dependencies]
-rand = "0.5"
+# TODO: Handle this version conflict
+# rand = "0.5"
+rand = "0.7"
