--- a/examples/remote/cargo_workspace/adder/BUILD.bazel
+++ b/examples/remote/cargo_workspace/adder/BUILD.bazel
@@ -6,13 +6,13 @@ DO NOT EDIT! Replaced on runs of cargo-raze
 package(default_visibility = [
   # Public for visibility by "@raze__crate__version//" targets.
   #
-  # Prefer access through "//remote/cargo_workspace/cargo", which limits external
+  # Prefer access through "//remote/cargo_workspace", which limits external
   # visibility to explicit Cargo.toml dependencies.
   "//visibility:public",
 ])
 
 licenses([
-  "notice", # MIT from expression "MIT OR Apache-2.0"
+  "restricted", # no license
 ])
 
 load(
@@ -23,20 +23,21 @@ load(
 )
 
 
-# Unsupported target "build-script-build" with type "custom-build" omitted
-
-rust_library(
-    name = "winapi_i686_pc_windows_gnu",
-    crate_type = "lib",
+rust_binary(
+    # Prefix bin name to disambiguate from (probable) collision with lib name
+    # N.B.: The exact form of this is subject to change.
+    name = "cargo_bin_adder",
     deps = [
+        "//remote/cargo_workspace/add-one:add_one",
+        "@cargo_workspace__rand__0_7_3//:rand",
     ],
     srcs = glob(["**/*.rs"]),
-    crate_root = "src/lib.rs",
-    edition = "2015",
+    crate_root = "src/main.rs",
+    edition = "2018",
     rustc_flags = [
         "--cap-lints=allow",
     ],
-    version = "0.4.0",
+    version = "0.1.0",
     tags = ["cargo-raze"],
     crate_features = [
     ],
