--- a/impl/Cargo.toml
+++ b/impl/Cargo.toml
@@ -37,6 +37,7 @@ toml = "0.4.10"
 serde_json = "1.0.34"
 tempdir = "0.3.7"
 spdx = "0.3.4"
+pathdiff = "0.2"
 
 [dev-dependencies]
 lazy_static = "1.2.0"
